--- a/meta-iot2000-example/conf/layer.conf
+++ b/meta-iot2000-example/conf/layer.conf
@@ -13,7 +13,7 @@ LAYERDEPENDS_iot2000-example += " \
 	iot2000-bsp \
 	"
 
-LAYERSERIES_COMPAT_iot2000-example = "zeus"
+LAYERSERIES_COMPAT_iot2000-example = "dunfell"
 
 IOT2000_MIT_LICENSE = "${LAYERDIR}/COPYING.MIT"
 IOT2000_GPLv2_LICENSE = "${LAYERDIR}/COPYING.GPLv2"
