example: Set OEBasicHash as the default BB_SIGNATURE_HANDLER
uclibc do_package fails on sstate_report_unihash with the default
BB_SIGNATURE_HANDLER?=OEEquivHash on dunfell. To work around this,
by setting it to the OEBasicHash, which is the default value of old
Yoctos, the sstate_report_unihash does nothing so that it never fails.

Signed-off-by: Baocheng Su <baocheng.su@siemens.com>

--- a/meta-iot2000-example/conf/layer.conf
+++ b/meta-iot2000-example/conf/layer.conf
@@ -17,3 +17,5 @@ LAYERSERIES_COMPAT_iot2000-example = "dunfell"
 
 IOT2000_MIT_LICENSE = "${LAYERDIR}/COPYING.MIT"
 IOT2000_GPLv2_LICENSE = "${LAYERDIR}/COPYING.GPLv2"
+
+BB_SIGNATURE_HANDLER = "OEBasicHash"
