debug: disable node and things that depend on node
Currently node v8 does not work with dunfell on IoT2000.

Signed-off-by: Baocheng Su <baocheng.su@siemens.com>

--- a/meta-iot2000-example/conf/distro/poky-iot2000.conf
+++ b/meta-iot2000-example/conf/distro/poky-iot2000.conf
@@ -6,7 +6,8 @@ DISTRO_VERSION = "V2.6.0"
 
 LINUXLIBCVERSION = "4.4%"
 
-BINDINGS_pn-mraa = "python nodejs"
+# TBD after node version lockdown, need to fix the swig issue befora adding back the node bindings
+BINDINGS_pn-mraa = "python "
 
 WICVARS += "BBLAYERS \
             HDDDIR \
